charon/tests/ui/simple/defaulted-rpitit.3.out
error: Type error after translation:
       Found incorrect type var: Bound(0, 0)
       Visitor stack:
         charon_lib::ast::types::TyKind
         charon_lib::ast::hash_cons::HashConsed<charon_lib::ast::types::TyKind>
         charon_lib::ast::types::Ty
         charon_lib::ids::index_map::IndexMap<charon_lib::ast::types::vars::TypeVarId, charon_lib::ast::types::Ty>
         charon_lib::ast::types::GenericArgs
         alloc::boxed::Box<charon_lib::ast::types::GenericArgs>
         charon_lib::ast::types::TypeDeclRef
         charon_lib::ast::types::TyKind
         charon_lib::ast::hash_cons::HashConsed<charon_lib::ast::types::TyKind>
         charon_lib::ast::types::Ty
         charon_lib::ast::gast::TraitAssocTyImpl
         charon_lib::ast::types::Binder<charon_lib::ast::gast::TraitAssocTyImpl>
         (charon_lib::ast::gast::TraitItemName, charon_lib::ast::types::Binder<charon_lib::ast::gast::TraitAssocTyImpl>)
         alloc::vec::Vec<(charon_lib::ast::gast::TraitItemName, charon_lib::ast::types::Binder<charon_lib::ast::gast::TraitAssocTyImpl>)>
         charon_lib::ast::gast::TraitImpl
       Binding stack (depth 2):
         0: <'_0>
         1: <T, [@TraitClause0]: @TraitDecl2<missing(@TypeBound(1, 0))>>
 --> tests/ui/simple/defaulted-rpitit.3.rs:8:1
  |
8 | impl<T> MyTrait<T> for () {}
  | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^

error: Type error after translation:
       Found incorrect type var: Bound(0, 0)
       Visitor stack:
         charon_lib::ast::types::TyKind
         charon_lib::ast::hash_cons::HashConsed<charon_lib::ast::types::TyKind>
         charon_lib::ast::types::Ty
         charon_lib::ids::index_map::IndexMap<charon_lib::ast::types::vars::TypeVarId, charon_lib::ast::types::Ty>
         charon_lib::ast::types::GenericArgs
         alloc::boxed::Box<charon_lib::ast::types::GenericArgs>
         charon_lib::ast::types::TraitImplRef
         charon_lib::ast::types::TraitRefKind
         charon_lib::ast::types::TraitRefContents
         charon_lib::ast::hash_cons::HashConsed<charon_lib::ast::types::TraitRefContents>
         charon_lib::ast::types::TraitRef
         alloc::boxed::Box<charon_lib::ast::types::TraitRef>
         charon_lib::ast::types::TraitRefKind
         charon_lib::ast::types::TraitRefContents
         charon_lib::ast::hash_cons::HashConsed<charon_lib::ast::types::TraitRefContents>
         charon_lib::ast::types::TraitRef
         charon_lib::ids::index_map::IndexMap<charon_lib::ast::types::vars::TraitClauseId, charon_lib::ast::types::TraitRef>
         charon_lib::ast::types::GenericArgs
         alloc::boxed::Box<charon_lib::ast::types::GenericArgs>
         charon_lib::ast::types::TypeDeclRef
         charon_lib::ast::types::TyKind
         charon_lib::ast::hash_cons::HashConsed<charon_lib::ast::types::TyKind>
         charon_lib::ast::types::Ty
         charon_lib::ast::gast::TraitAssocTyImpl
         charon_lib::ast::types::Binder<charon_lib::ast::gast::TraitAssocTyImpl>
         (charon_lib::ast::gast::TraitItemName, charon_lib::ast::types::Binder<charon_lib::ast::gast::TraitAssocTyImpl>)
         alloc::vec::Vec<(charon_lib::ast::gast::TraitItemName, charon_lib::ast::types::Binder<charon_lib::ast::gast::TraitAssocTyImpl>)>
         charon_lib::ast::gast::TraitImpl
       Binding stack (depth 2):
         0: <'_0>
         1: <T, [@TraitClause0]: @TraitDecl2<missing(@TypeBound(1, 0))>>
 --> tests/ui/simple/defaulted-rpitit.3.rs:8:1
  |
8 | impl<T> MyTrait<T> for () {}
  | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^

error: Type error after translation:
       Found incorrect clause var: Bound(0, 0)
       Visitor stack:
         charon_lib::ast::types::TraitRef
         charon_lib::ids::index_map::IndexMap<charon_lib::ast::types::vars::TraitClauseId, charon_lib::ast::types::TraitRef>
         charon_lib::ast::types::GenericArgs
         alloc::boxed::Box<charon_lib::ast::types::GenericArgs>
         charon_lib::ast::types::TraitImplRef
         charon_lib::ast::types::TraitRefKind
         charon_lib::ast::types::TraitRefContents
         charon_lib::ast::hash_cons::HashConsed<charon_lib::ast::types::TraitRefContents>
         charon_lib::ast::types::TraitRef
         alloc::boxed::Box<charon_lib::ast::types::TraitRef>
         charon_lib::ast::types::TraitRefKind
         charon_lib::ast::types::TraitRefContents
         charon_lib::ast::hash_cons::HashConsed<charon_lib::ast::types::TraitRefContents>
         charon_lib::ast::types::TraitRef
         charon_lib::ids::index_map::IndexMap<charon_lib::ast::types::vars::TraitClauseId, charon_lib::ast::types::TraitRef>
         charon_lib::ast::types::GenericArgs
         alloc::boxed::Box<charon_lib::ast::types::GenericArgs>
         charon_lib::ast::types::TypeDeclRef
         charon_lib::ast::types::TyKind
         charon_lib::ast::hash_cons::HashConsed<charon_lib::ast::types::TyKind>
         charon_lib::ast::types::Ty
         charon_lib::ast::gast::TraitAssocTyImpl
         charon_lib::ast::types::Binder<charon_lib::ast::gast::TraitAssocTyImpl>
         (charon_lib::ast::gast::TraitItemName, charon_lib::ast::types::Binder<charon_lib::ast::gast::TraitAssocTyImpl>)
         alloc::vec::Vec<(charon_lib::ast::gast::TraitItemName, charon_lib::ast::types::Binder<charon_lib::ast::gast::TraitAssocTyImpl>)>
         charon_lib::ast::gast::TraitImpl
       Binding stack (depth 2):
         0: <'_0>
         1: <T, [@TraitClause0]: @TraitDecl2<missing(@TypeBound(1, 0))>>
 --> tests/ui/simple/defaulted-rpitit.3.rs:8:1
  |
8 | impl<T> MyTrait<T> for () {}
  | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^

error: Type error after translation:
       Found incorrect type var: Bound(1, 0)
       Visitor stack:
         charon_lib::ast::types::TyKind
         charon_lib::ast::hash_cons::HashConsed<charon_lib::ast::types::TyKind>
         charon_lib::ast::types::Ty
         charon_lib::ids::index_map::IndexMap<charon_lib::ast::types::vars::TypeVarId, charon_lib::ast::types::Ty>
         charon_lib::ast::types::GenericArgs
         alloc::boxed::Box<charon_lib::ast::types::GenericArgs>
         charon_lib::ast::types::TraitDeclRef
         charon_lib::ast::types::RegionBinder<charon_lib::ast::types::TraitDeclRef>
         charon_lib::ast::types::TraitRefContents
         charon_lib::ast::hash_cons::HashConsed<charon_lib::ast::types::TraitRefContents>
         charon_lib::ast::types::TraitRef
         charon_lib::ids::index_map::IndexMap<charon_lib::ast::types::vars::TraitClauseId, charon_lib::ast::types::TraitRef>
         charon_lib::ast::types::GenericArgs
         alloc::boxed::Box<charon_lib::ast::types::GenericArgs>
         charon_lib::ast::types::TraitImplRef
         charon_lib::ast::types::TraitRefKind
         charon_lib::ast::types::TraitRefContents
         charon_lib::ast::hash_cons::HashConsed<charon_lib::ast::types::TraitRefContents>
         charon_lib::ast::types::TraitRef
         alloc::boxed::Box<charon_lib::ast::types::TraitRef>
         charon_lib::ast::types::TraitRefKind
         charon_lib::ast::types::TraitRefContents
         charon_lib::ast::hash_cons::HashConsed<charon_lib::ast::types::TraitRefContents>
         charon_lib::ast::types::TraitRef
         charon_lib::ids::index_map::IndexMap<charon_lib::ast::types::vars::TraitClauseId, charon_lib::ast::types::TraitRef>
         charon_lib::ast::types::GenericArgs
         alloc::boxed::Box<charon_lib::ast::types::GenericArgs>
         charon_lib::ast::types::TypeDeclRef
         charon_lib::ast::types::TyKind
         charon_lib::ast::hash_cons::HashConsed<charon_lib::ast::types::TyKind>
         charon_lib::ast::types::Ty
         charon_lib::ast::gast::TraitAssocTyImpl
         charon_lib::ast::types::Binder<charon_lib::ast::gast::TraitAssocTyImpl>
         (charon_lib::ast::gast::TraitItemName, charon_lib::ast::types::Binder<charon_lib::ast::gast::TraitAssocTyImpl>)
         alloc::vec::Vec<(charon_lib::ast::gast::TraitItemName, charon_lib::ast::types::Binder<charon_lib::ast::gast::TraitAssocTyImpl>)>
         charon_lib::ast::gast::TraitImpl
       Binding stack (depth 3):
         0: 
         1: <'_0>
         2: <T, [@TraitClause0]: @TraitDecl2<missing(@TypeBound(1, 0))>>
 --> tests/ui/simple/defaulted-rpitit.3.rs:8:1
  |
8 | impl<T> MyTrait<T> for () {}
  | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^

error: Type error after translation:
       Found incorrect type var: Bound(1, 0)
       Visitor stack:
         charon_lib::ast::types::TyKind
         charon_lib::ast::hash_cons::HashConsed<charon_lib::ast::types::TyKind>
         charon_lib::ast::types::Ty
         charon_lib::ids::index_map::IndexMap<charon_lib::ast::types::vars::TypeVarId, charon_lib::ast::types::Ty>
         charon_lib::ast::types::GenericArgs
         alloc::boxed::Box<charon_lib::ast::types::GenericArgs>
         charon_lib::ast::types::TraitDeclRef
         charon_lib::ast::types::RegionBinder<charon_lib::ast::types::TraitDeclRef>
         charon_lib::ast::types::TraitRefContents
         charon_lib::ast::hash_cons::HashConsed<charon_lib::ast::types::TraitRefContents>
         charon_lib::ast::types::TraitRef
         alloc::boxed::Box<charon_lib::ast::types::TraitRef>
         charon_lib::ast::types::TraitRefKind
         charon_lib::ast::types::TraitRefContents
         charon_lib::ast::hash_cons::HashConsed<charon_lib::ast::types::TraitRefContents>
         charon_lib::ast::types::TraitRef
         charon_lib::ids::index_map::IndexMap<charon_lib::ast::types::vars::TraitClauseId, charon_lib::ast::types::TraitRef>
         charon_lib::ast::types::GenericArgs
         alloc::boxed::Box<charon_lib::ast::types::GenericArgs>
         charon_lib::ast::types::TypeDeclRef
         charon_lib::ast::types::TyKind
         charon_lib::ast::hash_cons::HashConsed<charon_lib::ast::types::TyKind>
         charon_lib::ast::types::Ty
         charon_lib::ast::gast::TraitAssocTyImpl
         charon_lib::ast::types::Binder<charon_lib::ast::gast::TraitAssocTyImpl>
         (charon_lib::ast::gast::TraitItemName, charon_lib::ast::types::Binder<charon_lib::ast::gast::TraitAssocTyImpl>)
         alloc::vec::Vec<(charon_lib::ast::gast::TraitItemName, charon_lib::ast::types::Binder<charon_lib::ast::gast::TraitAssocTyImpl>)>
         charon_lib::ast::gast::TraitImpl
       Binding stack (depth 3):
         0: 
         1: <'_0>
         2: <T, [@TraitClause0]: @TraitDecl2<missing(@TypeBound(1, 0))>>
 --> tests/ui/simple/defaulted-rpitit.3.rs:8:1
  |
8 | impl<T> MyTrait<T> for () {}
  | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^

error: Type error after translation:
       Found incorrect type var: Bound(1, 0)
       Visitor stack:
         charon_lib::ast::types::TyKind
         charon_lib::ast::hash_cons::HashConsed<charon_lib::ast::types::TyKind>
         charon_lib::ast::types::Ty
         charon_lib::ids::index_map::IndexMap<charon_lib::ast::types::vars::TypeVarId, charon_lib::ast::types::Ty>
         charon_lib::ast::types::GenericArgs
         alloc::boxed::Box<charon_lib::ast::types::GenericArgs>
         charon_lib::ast::types::TraitDeclRef
         charon_lib::ast::types::RegionBinder<charon_lib::ast::types::TraitDeclRef>
         charon_lib::ast::types::TraitRefContents
         charon_lib::ast::hash_cons::HashConsed<charon_lib::ast::types::TraitRefContents>
         charon_lib::ast::types::TraitRef
         charon_lib::ids::index_map::IndexMap<charon_lib::ast::types::vars::TraitClauseId, charon_lib::ast::types::TraitRef>
         charon_lib::ast::types::GenericArgs
         alloc::boxed::Box<charon_lib::ast::types::GenericArgs>
         charon_lib::ast::types::TypeDeclRef
         charon_lib::ast::types::TyKind
         charon_lib::ast::hash_cons::HashConsed<charon_lib::ast::types::TyKind>
         charon_lib::ast::types::Ty
         charon_lib::ast::gast::TraitAssocTyImpl
         charon_lib::ast::types::Binder<charon_lib::ast::gast::TraitAssocTyImpl>
         (charon_lib::ast::gast::TraitItemName, charon_lib::ast::types::Binder<charon_lib::ast::gast::TraitAssocTyImpl>)
         alloc::vec::Vec<(charon_lib::ast::gast::TraitItemName, charon_lib::ast::types::Binder<charon_lib::ast::gast::TraitAssocTyImpl>)>
         charon_lib::ast::gast::TraitImpl
       Binding stack (depth 3):
         0: 
         1: <'_0>
         2: <T, [@TraitClause0]: @TraitDecl2<missing(@TypeBound(1, 0))>>
 --> tests/ui/simple/defaulted-rpitit.3.rs:8:1
  |
8 | impl<T> MyTrait<T> for () {}
  | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^

error: Type error after transformations:
       Found incorrect type var: Bound(0, 0)
       Visitor stack:
         charon_lib::ast::types::TyKind
         charon_lib::ast::hash_cons::HashConsed<charon_lib::ast::types::TyKind>
         charon_lib::ast::types::Ty
         charon_lib::ids::index_map::IndexMap<charon_lib::ast::types::vars::TypeVarId, charon_lib::ast::types::Ty>
         charon_lib::ast::types::GenericArgs
         alloc::boxed::Box<charon_lib::ast::types::GenericArgs>
         charon_lib::ast::types::TypeDeclRef
         charon_lib::ast::types::TyKind
         charon_lib::ast::hash_cons::HashConsed<charon_lib::ast::types::TyKind>
         charon_lib::ast::types::Ty
         charon_lib::ast::gast::TraitAssocTyImpl
         charon_lib::ast::types::Binder<charon_lib::ast::gast::TraitAssocTyImpl>
         (charon_lib::ast::gast::TraitItemName, charon_lib::ast::types::Binder<charon_lib::ast::gast::TraitAssocTyImpl>)
         alloc::vec::Vec<(charon_lib::ast::gast::TraitItemName, charon_lib::ast::types::Binder<charon_lib::ast::gast::TraitAssocTyImpl>)>
         charon_lib::ast::gast::TraitImpl
       Binding stack (depth 2):
         0: <'_0>
         1: <T, [@TraitClause0]: @TraitDecl2<missing(@TypeBound(1, 0))>>
 --> tests/ui/simple/defaulted-rpitit.3.rs:8:1
  |
8 | impl<T> MyTrait<T> for () {}
  | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^

error: Type error after transformations:
       Found incorrect type var: Bound(0, 0)
       Visitor stack:
         charon_lib::ast::types::TyKind
         charon_lib::ast::hash_cons::HashConsed<charon_lib::ast::types::TyKind>
         charon_lib::ast::types::Ty
         charon_lib::ids::index_map::IndexMap<charon_lib::ast::types::vars::TypeVarId, charon_lib::ast::types::Ty>
         charon_lib::ast::types::GenericArgs
         alloc::boxed::Box<charon_lib::ast::types::GenericArgs>
         charon_lib::ast::types::TraitImplRef
         charon_lib::ast::types::TraitRefKind
         charon_lib::ast::types::TraitRefContents
         charon_lib::ast::hash_cons::HashConsed<charon_lib::ast::types::TraitRefContents>
         charon_lib::ast::types::TraitRef
         alloc::boxed::Box<charon_lib::ast::types::TraitRef>
         charon_lib::ast::types::TraitRefKind
         charon_lib::ast::types::TraitRefContents
         charon_lib::ast::hash_cons::HashConsed<charon_lib::ast::types::TraitRefContents>
         charon_lib::ast::types::TraitRef
         charon_lib::ids::index_map::IndexMap<charon_lib::ast::types::vars::TraitClauseId, charon_lib::ast::types::TraitRef>
         charon_lib::ast::types::GenericArgs
         alloc::boxed::Box<charon_lib::ast::types::GenericArgs>
         charon_lib::ast::types::TypeDeclRef
         charon_lib::ast::types::TyKind
         charon_lib::ast::hash_cons::HashConsed<charon_lib::ast::types::TyKind>
         charon_lib::ast::types::Ty
         charon_lib::ast::gast::TraitAssocTyImpl
         charon_lib::ast::types::Binder<charon_lib::ast::gast::TraitAssocTyImpl>
         (charon_lib::ast::gast::TraitItemName, charon_lib::ast::types::Binder<charon_lib::ast::gast::TraitAssocTyImpl>)
         alloc::vec::Vec<(charon_lib::ast::gast::TraitItemName, charon_lib::ast::types::Binder<charon_lib::ast::gast::TraitAssocTyImpl>)>
         charon_lib::ast::gast::TraitImpl
       Binding stack (depth 2):
         0: <'_0>
         1: <T, [@TraitClause0]: @TraitDecl2<missing(@TypeBound(1, 0))>>
 --> tests/ui/simple/defaulted-rpitit.3.rs:8:1
  |
8 | impl<T> MyTrait<T> for () {}
  | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^

error: Type error after transformations:
       Found incorrect clause var: Bound(0, 0)
       Visitor stack:
         charon_lib::ast::types::TraitRef
         charon_lib::ids::index_map::IndexMap<charon_lib::ast::types::vars::TraitClauseId, charon_lib::ast::types::TraitRef>
         charon_lib::ast::types::GenericArgs
         alloc::boxed::Box<charon_lib::ast::types::GenericArgs>
         charon_lib::ast::types::TraitImplRef
         charon_lib::ast::types::TraitRefKind
         charon_lib::ast::types::TraitRefContents
         charon_lib::ast::hash_cons::HashConsed<charon_lib::ast::types::TraitRefContents>
         charon_lib::ast::types::TraitRef
         alloc::boxed::Box<charon_lib::ast::types::TraitRef>
         charon_lib::ast::types::TraitRefKind
         charon_lib::ast::types::TraitRefContents
         charon_lib::ast::hash_cons::HashConsed<charon_lib::ast::types::TraitRefContents>
         charon_lib::ast::types::TraitRef
         charon_lib::ids::index_map::IndexMap<charon_lib::ast::types::vars::TraitClauseId, charon_lib::ast::types::TraitRef>
         charon_lib::ast::types::GenericArgs
         alloc::boxed::Box<charon_lib::ast::types::GenericArgs>
         charon_lib::ast::types::TypeDeclRef
         charon_lib::ast::types::TyKind
         charon_lib::ast::hash_cons::HashConsed<charon_lib::ast::types::TyKind>
         charon_lib::ast::types::Ty
         charon_lib::ast::gast::TraitAssocTyImpl
         charon_lib::ast::types::Binder<charon_lib::ast::gast::TraitAssocTyImpl>
         (charon_lib::ast::gast::TraitItemName, charon_lib::ast::types::Binder<charon_lib::ast::gast::TraitAssocTyImpl>)
         alloc::vec::Vec<(charon_lib::ast::gast::TraitItemName, charon_lib::ast::types::Binder<charon_lib::ast::gast::TraitAssocTyImpl>)>
         charon_lib::ast::gast::TraitImpl
       Binding stack (depth 2):
         0: <'_0>
         1: <T, [@TraitClause0]: @TraitDecl2<missing(@TypeBound(1, 0))>>
 --> tests/ui/simple/defaulted-rpitit.3.rs:8:1
  |
8 | impl<T> MyTrait<T> for () {}
  | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^

error: Type error after transformations:
       Found incorrect type var: Bound(1, 0)
       Visitor stack:
         charon_lib::ast::types::TyKind
         charon_lib::ast::hash_cons::HashConsed<charon_lib::ast::types::TyKind>
         charon_lib::ast::types::Ty
         charon_lib::ids::index_map::IndexMap<charon_lib::ast::types::vars::TypeVarId, charon_lib::ast::types::Ty>
         charon_lib::ast::types::GenericArgs
         alloc::boxed::Box<charon_lib::ast::types::GenericArgs>
         charon_lib::ast::types::TraitDeclRef
         charon_lib::ast::types::RegionBinder<charon_lib::ast::types::TraitDeclRef>
         charon_lib::ast::types::TraitRefContents
         charon_lib::ast::hash_cons::HashConsed<charon_lib::ast::types::TraitRefContents>
         charon_lib::ast::types::TraitRef
         charon_lib::ids::index_map::IndexMap<charon_lib::ast::types::vars::TraitClauseId, charon_lib::ast::types::TraitRef>
         charon_lib::ast::types::GenericArgs
         alloc::boxed::Box<charon_lib::ast::types::GenericArgs>
         charon_lib::ast::types::TraitImplRef
         charon_lib::ast::types::TraitRefKind
         charon_lib::ast::types::TraitRefContents
         charon_lib::ast::hash_cons::HashConsed<charon_lib::ast::types::TraitRefContents>
         charon_lib::ast::types::TraitRef
         alloc::boxed::Box<charon_lib::ast::types::TraitRef>
         charon_lib::ast::types::TraitRefKind
         charon_lib::ast::types::TraitRefContents
         charon_lib::ast::hash_cons::HashConsed<charon_lib::ast::types::TraitRefContents>
         charon_lib::ast::types::TraitRef
         charon_lib::ids::index_map::IndexMap<charon_lib::ast::types::vars::TraitClauseId, charon_lib::ast::types::TraitRef>
         charon_lib::ast::types::GenericArgs
         alloc::boxed::Box<charon_lib::ast::types::GenericArgs>
         charon_lib::ast::types::TypeDeclRef
         charon_lib::ast::types::TyKind
         charon_lib::ast::hash_cons::HashConsed<charon_lib::ast::types::TyKind>
         charon_lib::ast::types::Ty
         charon_lib::ast::gast::TraitAssocTyImpl
         charon_lib::ast::types::Binder<charon_lib::ast::gast::TraitAssocTyImpl>
         (charon_lib::ast::gast::TraitItemName, charon_lib::ast::types::Binder<charon_lib::ast::gast::TraitAssocTyImpl>)
         alloc::vec::Vec<(charon_lib::ast::gast::TraitItemName, charon_lib::ast::types::Binder<charon_lib::ast::gast::TraitAssocTyImpl>)>
         charon_lib::ast::gast::TraitImpl
       Binding stack (depth 3):
         0: 
         1: <'_0>
         2: <T, [@TraitClause0]: @TraitDecl2<missing(@TypeBound(1, 0))>>
 --> tests/ui/simple/defaulted-rpitit.3.rs:8:1
  |
8 | impl<T> MyTrait<T> for () {}
  | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^

error: Type error after transformations:
       Found incorrect type var: Bound(1, 0)
       Visitor stack:
         charon_lib::ast::types::TyKind
         charon_lib::ast::hash_cons::HashConsed<charon_lib::ast::types::TyKind>
         charon_lib::ast::types::Ty
         charon_lib::ids::index_map::IndexMap<charon_lib::ast::types::vars::TypeVarId, charon_lib::ast::types::Ty>
         charon_lib::ast::types::GenericArgs
         alloc::boxed::Box<charon_lib::ast::types::GenericArgs>
         charon_lib::ast::types::TraitDeclRef
         charon_lib::ast::types::RegionBinder<charon_lib::ast::types::TraitDeclRef>
         charon_lib::ast::types::TraitRefContents
         charon_lib::ast::hash_cons::HashConsed<charon_lib::ast::types::TraitRefContents>
         charon_lib::ast::types::TraitRef
         alloc::boxed::Box<charon_lib::ast::types::TraitRef>
         charon_lib::ast::types::TraitRefKind
         charon_lib::ast::types::TraitRefContents
         charon_lib::ast::hash_cons::HashConsed<charon_lib::ast::types::TraitRefContents>
         charon_lib::ast::types::TraitRef
         charon_lib::ids::index_map::IndexMap<charon_lib::ast::types::vars::TraitClauseId, charon_lib::ast::types::TraitRef>
         charon_lib::ast::types::GenericArgs
         alloc::boxed::Box<charon_lib::ast::types::GenericArgs>
         charon_lib::ast::types::TypeDeclRef
         charon_lib::ast::types::TyKind
         charon_lib::ast::hash_cons::HashConsed<charon_lib::ast::types::TyKind>
         charon_lib::ast::types::Ty
         charon_lib::ast::gast::TraitAssocTyImpl
         charon_lib::ast::types::Binder<charon_lib::ast::gast::TraitAssocTyImpl>
         (charon_lib::ast::gast::TraitItemName, charon_lib::ast::types::Binder<charon_lib::ast::gast::TraitAssocTyImpl>)
         alloc::vec::Vec<(charon_lib::ast::gast::TraitItemName, charon_lib::ast::types::Binder<charon_lib::ast::gast::TraitAssocTyImpl>)>
         charon_lib::ast::gast::TraitImpl
       Binding stack (depth 3):
         0: 
         1: <'_0>
         2: <T, [@TraitClause0]: @TraitDecl2<missing(@TypeBound(1, 0))>>
 --> tests/ui/simple/defaulted-rpitit.3.rs:8:1
  |
8 | impl<T> MyTrait<T> for () {}
  | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^

error: Type error after transformations:
       Found incorrect type var: Bound(1, 0)
       Visitor stack:
         charon_lib::ast::types::TyKind
         charon_lib::ast::hash_cons::HashConsed<charon_lib::ast::types::TyKind>
         charon_lib::ast::types::Ty
         charon_lib::ids::index_map::IndexMap<charon_lib::ast::types::vars::TypeVarId, charon_lib::ast::types::Ty>
         charon_lib::ast::types::GenericArgs
         alloc::boxed::Box<charon_lib::ast::types::GenericArgs>
         charon_lib::ast::types::TraitDeclRef
         charon_lib::ast::types::RegionBinder<charon_lib::ast::types::TraitDeclRef>
         charon_lib::ast::types::TraitRefContents
         charon_lib::ast::hash_cons::HashConsed<charon_lib::ast::types::TraitRefContents>
         charon_lib::ast::types::TraitRef
         charon_lib::ids::index_map::IndexMap<charon_lib::ast::types::vars::TraitClauseId, charon_lib::ast::types::TraitRef>
         charon_lib::ast::types::GenericArgs
         alloc::boxed::Box<charon_lib::ast::types::GenericArgs>
         charon_lib::ast::types::TypeDeclRef
         charon_lib::ast::types::TyKind
         charon_lib::ast::hash_cons::HashConsed<charon_lib::ast::types::TyKind>
         charon_lib::ast::types::Ty
         charon_lib::ast::gast::TraitAssocTyImpl
         charon_lib::ast::types::Binder<charon_lib::ast::gast::TraitAssocTyImpl>
         (charon_lib::ast::gast::TraitItemName, charon_lib::ast::types::Binder<charon_lib::ast::gast::TraitAssocTyImpl>)
         alloc::vec::Vec<(charon_lib::ast::gast::TraitItemName, charon_lib::ast::types::Binder<charon_lib::ast::gast::TraitAssocTyImpl>)>
         charon_lib::ast::gast::TraitImpl
       Binding stack (depth 3):
         0: 
         1: <'_0>
         2: <T, [@TraitClause0]: @TraitDecl2<missing(@TypeBound(1, 0))>>
 --> tests/ui/simple/defaulted-rpitit.3.rs:8:1
  |
8 | impl<T> MyTrait<T> for () {}
  | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^

ERROR Charon failed to translate this code (12 errors)
